Relax JVM module encapsulation to get the old Open Telemetry agent to work properly with JDK21.